# comunhaodebens

./: .env.example  .gitignore  AUDITORIA_TECNICA.md  JULES_REPORT.md  Modelfile  README.md  docker-compose.dev.yml  docker-compose.yml  start-backend.bat  start-dev.bat  start-dev.ps1  start-frontend.bat  start-whatsapp.bat
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_evolucao_pix.py
backend/scripts/: bootstrap_local_db.py  create_admin.py  seed_dev_data.py
backend/src/: __init__.py  config.py
backend/src/api/: main.py  sse_utils.py
backend/src/api/middleware/: auth.py
backend/src/api/routes/: admin.py  auth.py  contribuicoes.py  debug.py  health.py  ocr_progress.py  pendencias.py  relatorios.py  webhooks.py  whatsapp.py
backend/src/application/reports/: relatorio_service.py
backend/src/application/services/: classificador_comprovante.py  debug_logger.py  extracao_ocr.py  identificacao_service.py  notificacao_service.py  ocr_logger.py  protocolo_service.py
backend/src/application/use_cases/: processar_comprovante.py  registrar_contribuicao.py  reprocessar_comprovante.py
backend/src/domain/entities/: contribuicao.py  membro.py  pendencia.py
backend/src/domain/events/: novo_comprovante_recebido.py
backend/src/domain/repositories/: icontribuicao_repository.py  imembro_repository.py
backend/src/domain/value_objects/: confianca.py  dinheiro.py  protocolo.py  telefone.py
backend/src/infrastructure/ai/: ollama_service.py  response_parser.py
backend/src/tasks/: backup_task.py  celery_app.py  ocr_task.py  relatorio_task.py  sheets_task.py
backend/tests/: conftest.py  test_api_endpoints.py  test_backup_task.py  test_create_admin_script.py  test_dev_mocks.py  test_integration_testcontainers.py  test_relatorio_service.py  test_response_parser.py  test_value_objects.py  test_webhook_integration.py
(+91 files in other folders)
