[project]
name = "cdb-shalom-backend"
version = "0.1.0"
description = "CDB Shalom — backend de automação financeira"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0,<5",
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "weasyprint>=62.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.9",
    "fakeredis>=2.23.0",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]
ocr-tesseract = [
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "fakeredis>=2.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=60",
]
markers = [
    "integration: testes que usam testcontainers (Postgres/Redis reais)",
    "unit: testes rápidos sem dependências externas",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/infrastructure/ocr/paddle_ocr_service.py",
    "src/infrastructure/ocr/preprocessor.py",
    "src/infrastructure/dev_mocks/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
